--- a/src/main/resources/TeacherInformationView.fxml
+++ b/src/main/resources/TeacherInformationView.fxml
@@ -6,7 +6,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane prefHeight="455.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="13.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teacher info ">
@@ -39,7 +40,17 @@
       </Text>
       <Button layoutX="428.0" layoutY="178.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Assign new course" />
       <ListView fx:id="teachingCoursesListView" layoutX="12.0" layoutY="213.0" prefHeight="200.0" prefWidth="548.0" />
-      <Button layoutX="286.0" layoutY="178.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Delete course" />
+      <Button layoutX="286.0" layoutY="178.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Unassign course" onAction="#unassignCourse"/>
       <Button layoutX="14.0" layoutY="416.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Delete Account" />
+      <Button layoutX="506.0" layoutY="17.0" mnemonicParsing="false" text="Edit" />
+      <Button onAction="#returnToPreviousForm">
+         <graphic>
+            <ImageView fitHeight="20" fitWidth="20">
+               <image>
+                  <Image url="@/images/arrow_back.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
