--- a/src/main/resources/StudentInformationView.fxml
+++ b/src/main/resources/StudentInformationView.fxml
@@ -39,8 +39,8 @@
          </font>
       </Text>
       <ListView fx:id="subscribedCoursesListView" layoutX="14.0" layoutY="192.0" prefHeight="163.0" prefWidth="604.0" />
-      <Button layoutX="357.0" layoutY="159.0" mnemonicParsing="false" text="Unsubscribe course" />
-      <Button layoutX="485.0" layoutY="159.0" mnemonicParsing="false" text="Subscribe on course" />
-      <Button layoutX="14.0" layoutY="363.0" mnemonicParsing="false"  text="Delete account" />
+      <Button layoutX="357.0" layoutY="159.0" mnemonicParsing="false" text="Unsubscribe course" onAction="#unsubscribeCourse"/>
+      <Button layoutX="485.0" layoutY="159.0" mnemonicParsing="false" text="Subscribe on course" onAction="#subscribeOnCourse"/>
+      <Button layoutX="14.0" layoutY="363.0" mnemonicParsing="false"  text="Delete account" onAction="#deleteUser"/>
    </children>
 </AnchorPane>
